--- a/sitio_2.html
+++ b/sitio_2.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <li><a href="index.html">Inicio</a></li>
+    <br>
+    <br>
     <p>este es un párrafo</p>
 </body>
 </html>
