--- a/sitio_prueba.html
+++ b/sitio_prueba.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <li><a href="index.html">Inicio</a></li>
+    <br>
+    <br>
     <p>Mi gato es muy gruñon</p>
     <p>Este es mi segundo párrafo</p>
 </body>
