--- a/sitio_3.html
+++ b/sitio_3.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <li><a href="index.html">Inicio</a></li>
+    <br>
+    <br>
     <p>Hola mundo</p>
     <h1>Hola mundo</h1>
     <h2>Hola mundo</h2>
